🚀 Major Enhancement: Real-time Charts & Professional UI
✨ Features Added:
- Real-time ASCII charts with historical data tracking
- Beautiful progress bars with color coding
- Enhanced system panel with CPU frequency, uptime, load avg
- Smart log panel with syntax highlighting and filtering
- Professional dashboard header with time and status

🔧 Technical Improvements:
- Fixed layout positioning logic (resolved 'No layout with name 0' error)
- Enhanced dashboard engine with better error handling
- Improved refresh rate and real-time updates
- Added mini-charts using block characters (▁▂▃▄▅▆▇█)

📦 Distribution Ready:
- One-liner installation script
- Homebrew formula and tap setup
- Professional README with screenshot
- Package building and PyPI preparation
- Cross-platform compatibility improvements

🎨 UI/UX Enhancements:
- Color-coded metrics (green/yellow/red based on usage)
- Emoji indicators and visual improvements
- Responsive layout that adapts to terminal size
- Professional documentation and guides

Real-time dashboards. Questionable aesthetics. 🗑️✨

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "dashtrash"
 version = "0.1.0"
 description = "Terminal-based dashboard for real-time monitoring. Real-time dashboards. Questionable aesthetics."
 readme = "README.md"
-license = {file = "LICENSE"}
+license = "MIT"
 authors = [
     {name = "dashtrash contributors", email = "info@dashtrash.dev"}
 ]
@@ -20,7 +20,7 @@ classifiers = [
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: System Administrators",
-    "License :: OSI Approved :: MIT License",
+
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
