--- a/dashboard.yml
+++ b/dashboard.yml
@@ -2,6 +2,15 @@ panels:
   - type: system
     position: top
     refresh_interval: 2
+  - type: temperature
+    position: left
+    refresh_interval: 3
+  - type: clock
+    position: right
+    refresh_interval: 1
+    time_format: "24h"
+    show_timezone: true
+    show_uptime: true
 
 banner:
   text: "DashTrash"
